# libriichi

./: .gitignore  Cargo.toml  README.md
src/: hand.rs  lib.rs  mjai.rs  tile.rs
src/algo/: agari.rs  danger.rs  mod.rs  shanten.rs
src/algo/agari/: calc.rs  mod.rs  yaku.rs
src/algo/sp/: calc.rs  candidate.rs  mod.rs  state.rs  tile.rs
src/convlog/: conv.rs  generate.rs  kyoku_filter.rs  mjai_tenhou.rs  mod.rs  tenhou_mjai.rs
src/convlog/tenhou/: json_scheme.rs  log.rs  mod.rs  tile.rs
src/state/: action.rs  agent_helper.rs  getter.rs  item.rs  mod.rs  player_state.rs  test.rs  update.rs
