[package]
name = "libriichi"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "riichi"

[dependencies]
anyhow = "1"
serde_json = "1"
boomphf = "0.6"
byteorder = "1"
serde_with = "3"
flate2 = "1"
derivative = "2"
ahash = "0.8"
tinyvec = { version = "1", features = ["alloc", "serde", "rustc_1_57"] }
serde = { version = "1", features = ["derive"] }
