[package]
name = "libriichi"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "riichi"

[dependencies]
ahash = "0.8"
anyhow = "1"
boomphf = "0.6"
byteorder = "1"
derivative = "2"
flate2 = "1"
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_tuple = "1"
serde_with = "3"
tinyvec = { version = "1", features = ["alloc", "serde", "rustc_1_57"] }
